# soccer_vemon_plus

./: .gitignore  README.md  _tmp_bom_test.json  _tmp_flashscore_home.html  _tmp_flashscore_odds_page.html  pyproject.toml  requirements.txt
.claude/: settings.local.json
scripts/: deploy_to_vm.sh  soccer-daemon.service  vm_setup.sh
src/: fix_raw_scores.py  headless_all_odds_cli.py  headless_cli.py  headless_daemon.py  headless_league_cli.py  headless_score_cli.py
src/assets/: config.json
src/core/: config.py
src/core/managers/: config_manager.py  supabase_manager.py
src/formatters/: excel_match_formatter_v2.py
src/headless/: bootstrap.py  http.py  league_fetch.py  odds_fetch.py  routes.py  selenium_fetch.py
src/headless/parsers/: __init__.py  all_odds.py  common.py  h2h.py  league_results.py  match.py  match_summary.py  standings.py
src/headless/pipeline/: __init__.py  all_odds_pipeline.py  league_pipeline.py  match_pipeline.py
src/processors/: match_formatter_runner.py
src/tests/: test_all_odds_batch_state.py  test_all_odds_parser.py  test_all_odds_score_state.py  test_all_odds_scores.py  test_headless_routes.py  test_league_results.py  test_match_pipeline_cache.py
src/utils/: all_odds_score_state.py  all_odds_store.py  env_loader.py  export.py  file_saver.py  league_ingest_status.py  market_payload_builder.py  notifier.py  paths.py  signal_derive.py
