[project]
name = "soccer-vemon-plus"
version = "0.0.0"
description = "Hybrid Flashscore scraper optimized for local and small-VM runs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Buyeni tech", email = "buyenitech@gmail.com" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "python-dotenv>=1.0.0",
  "requests>=2.32.3",
  "selenium>=4.36.0",
  "supabase>=2.0.0",
]

[tool.poetry]
package-mode = false
